@@ -55,6 +55,7 @@ Cacti CHANGELOG
 -issue#5068: Installer deprecation messages during CLI install in PHP8.2
 -issue#5084: After Update 1.2.20 to 1.2.22 CMDPHP ERROR: A DB Cell Failed
 -issue#5088: CLI script host_update_template.php falsely changes reindex method to uptime
+-issue#5096: PHP8.x SNMP Agent Complains of missing $cache variable in snmpagent_mibcachechild.php
 -feature#1100: Structured path not created when using remote poller and Update On-Demand
 -feature#1392: AJAX handled errors do not notify Admins that page errors exist
 -feature#2239: Allow Import and Export to be more controlled
